--- a/thessaloniki_wwii_map_corrected.html
+++ b/thessaloniki_wwii_map_corrected.html
@@ -24,14 +24,15 @@
     }).addTo(map);
 
     const sites = [
-      { name: 'Old Baron Hirsch Ghetto', coords: [40.6388, 22.9266] },
-      { name: 'Jewish Museum of Thessaloniki', coords: [40.6378, 22.9408] },
-      { name: 'Pliata Eleftherias (Freedom Square)', coords: [40.6359, 22.9403] },
-      { name: 'White Tower', coords: [40.6264, 22.9514] },
-      { name: 'Train Station (WWII Deportation Site)', coords: [40.6443, 22.9147] },
+      { name: 'Baron Hirsch Ghetto', coords: [40.6388, 22.9266] },
+      { name: 'Jewish Museum of Thessaloniki', address: '13 Agiou Mina Street, Thessaloniki', coords: [40.6378, 22.9408] },
+      { name: 'Pliata Eleftherias (Liberty Square)', address: 'Mitropoleos / Venizelou / Ionos Dragoumi, Thessaloniki', coords: [40.6359, 22.9403] },
+      { name: '“Menorah in Flames” Memorial', address: 'Southeastern corner of Eleftherias Square', coords: [40.6356, 22.9410]
+      { name: 'White Tower', address: 'Nikis Avenue at the waterfront, Thessaloniki', coords: [40.6264, 22.9514] },
+      { name: 'Old Train Station (WWII Deportation Site)', address: 'Thessaloniki 546 27 (near Monastiriou 15)', coords: [40.6418, 22.9248] },
       { name: 'Reggi Vardar Area', coords: [40.6420, 22.9170] },
-      { name: 'Former Residence of Estrongo Nachama (corrected)', coords: [40.6175, 22.9613] },
-      { name: 'Site of Aristotle University (on Jewish Cemetery)', coords: [40.6291, 22.9577] }
+      { name: 'Former Residence of Estrongo Nachama', address: 'Al. Papanastasiou 20-22, Thessaloniki 546 39', coords: [40.6175, 22.9613] },
+      { name: 'Site of Aristotle University of Thessaloniki (on Jewish Cemetery)', address: 'AUTh campus', coords: [40.6291, 22.9577] }
     ];
 
     sites.forEach(site => {
